--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Matthew McClure <mmcclure@brightcove.com>",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.3.11",
     "body-parser": "^1.9.3",
     "express": "^4.10.3",
     "lodash": "^2.4.1",
