--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Matthew McClure <mmcclure@brightcove.com>",
   "license": "MIT",
@@ -24,6 +24,9 @@
   },
   "devDependencies": {
     "chai": "^1.10.0",
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "nock": "^0.54.0",
+    "rewire": "^2.1.3",
+    "sinon": "^1.12.2"
   }
 }
